# Veiligheidsrendement

./: .gitignore  BenefitsOfMonitoring.py  BenefitsOfMonitoring_base.py  CaseStudyPlot.py  ComparisonTCandOI.py  DikeClasses.py  DikeSection.py  DikeTraject.py  Dockerfile  GenerateProfiles.py  HelperFunctions.py  HydraRing_scripts.py  InvestmentsSAFE.py  LICENSE  Measure.py  Mechanisms.py  ProbabilisticFunctions.py  README.md  ReliabilityCalculation.py  RunModel.py  SectionLifeCycleRelability.py  SectionLifeCycleReliability.py  SectionReliability.py  Solutions.py  Strategy.py  StrategyEvaluation.py  TestOptimization_main.py  config.py  interventions.csv  measures.csv  pyproject.toml  readQuickScan.py  runAssessment.py  runReinforcements.py  sandbox_new.py  sandbox_new_Weurt.py  sandbox_research_specifiek_dsn.py  sonar-project.properties  test.py  test_FC.py  (+2 more)
.config/: Dockerfile  SAFE_envi.yml  environment.yml  tc_agent_environment.yml
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  externals.Dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-feature_request.yaml  2-bug_report.yaml  3-documentation_improvement.yaml  4-release.yaml  5-other-task-request.yaml  config.yml
.github/workflows/: ci-bump.yml  ci.yml  ci_installation.yml  normalize_code.yml
ISGSR/: BenefitsOfMonitoring.py  BenefitsOfMonitoringPlots.py  BenefitsOfMonitoring_base.py
OldCode/: readQuickScan.py  runAssessment.py  runReinforcements.py
SAFE/: InvestmentsSAFE.py  config.py
SeparateRoutines/: GenerateInput.py  GenerateProfiles.py  runHBN.py  test_script.py
SeparateRoutines/.pylint.d/: GenerateInput1.stats
Verification/: AnalysisofResults.py  PutInZip.py  Verification_MeasureData.py  Verification_SampledCases.py  Verification_SelectedCases.py  Verification_rerunsinglecase.py
docs/: CONTRIBUTING.md  changelog.md  logging.md  tutorial.md
docs/db_diagram/: vrtool_sql_input.drawio
environment/: SAFE_envi.yml
scripts/: LengthEffects.py  README.md  export_csv_to_database.py  migrate_database.py  update_reference_dbs.py  v0_2_0__to__v0_3_0.sql  vrtool_544_migration_patch.sql
scripts/ISGSR/: BenefitsOfMonitoring.py  BenefitsOfMonitoring_base.py
scripts/SAFE/: config_test.py  globalsave.pkl  test_newGeometry.py
scripts/SeparateRoutines/: CopyResults_paper.py  FailureProbabilityBudgets.py
scripts/Testing/: testOverflowBundling.py
scripts/Verification/: AnalysisofResults.py
scripts/design/: check_beta_distribution.py  combine_omega_length_effect.py  cost_of_target_reliability.ipynb  create_requirement_files.py  deltares_colors.py  main.py  modify_inputs.py  plot_design.py  run_vrtool_specific.py  sensitivity.py  utils.py
scripts/migration/: README.md  migrate_database.py  migrate_test_databases.py
scripts/postprocessing/: README.md  database_access_functions.py  database_analytics.py  generate_output.py
src/: __main__.py  config.py  vrtool_old_workflow.py
src/DecisionMaking/: Measure.py  Solutions.py  Strategy.py  StrategyEvaluation.py
src/FloodDefenceSystem/: DikeSection.py  DikeTraject.py  Mechanisms.py  ReliabilityCalculation.py  SectionReliability.py
src/ProbabilisticTools/: HydraRing_scripts.py  ProbabilisticFunctions.py
src/ResultAnalysis/: CaseStudyPlot.py
src/defaults/: README.md  vrtool_config.py
src/run_workflows/: README.md  run_measures.py  run_optimization.py  run_safety_assessment.py  vrtool_plot_mode.py  vrtool_run_full_model.py  vrtool_run_model.py  vrtool_run_protocol.py  vrtool_run_result_protocol.py
tests/: __init__.py  api_acceptance_cases.py  config_test.py  conftest.py  optimization_separate.py  postprocessing_report.py  test_acceptance.py  test_api.py  test_api_reported_bugs.py  test_api_run_workflows_acceptance.py  test_db.py  test_determineNewGeometry.py  test_integrated.py  test_main.py  test_vrtool_logger.py
tests/FloodDefenceSystem/: test_mechanisms.py
tests/api_acceptance_cases/: acceptance_test_case.py  run_full_validator.py  run_step_assessment_validator.py  run_step_measures_validator.py  run_step_optimization_validator.py  run_step_validator_protocol.py
tests/common/: test_dike_traject_info.py  test_enums.py  test_measure_unit_costs.py
tests/decision_making/: test_traject_risk.py
tests/defaults/: test_vrtool_config.py
tests/failure_mechanisms/: test_mechanism_simple_calculator.py  test_mechanism_simple_input.py
tests/flood_defence_system/: test_dike_section.py  test_dike_traject.py  test_dike_traject_info.py  test_failure_mechanism_collection.py  test_mechanisms.py  test_section_reliability.py
tests/integrated_SAFE_16-3_small/: DV47.xlsx  DV50.xlsx
tests/optimization/: conftest.py
tests/orm/: __init__.py  conftest.py  test_orm_controllers.py
tests/post_processing/: test_compare_investment_strategy.py  test_plot_lcc.py
tests/probabilistic_tools/: test_combin_functions.py
tests/run_workflows/: __init__.py  conftest.py  test_vrtool_run_full_model.py
tests/tests/: test_integrated.py  test_limitstates.py
tools/: GenerateInput.py  GenerateProfiles.py  HelperFunctions.py  RunModel.py  generateInputShapefile.py  unit_costs.csv
tools/HydraRingComputations/: OverslagHydraRing.py  ToetspeilHydraRing.py
tools/Preprocessing/: GenerateInput.py  generateInput38-1.py
tools/RunPilot/: Pilot_config.py  RunPilotCase.py
tools/RunSAFE/: InvestmentsSAFE.py  SAFE_config.py
tools/TestOptimization/: TestOptimization_main.py
vrtool/: __main__.py  api.py  api_validator.py  common_functions.py  plot_section.py  sandbox_matthias.py  stability_geometry_helper.py  try_surface_modifier.py  vrtool_logger.py
vrtool/DecisionMaking/: Measure.py
vrtool/FloodDefenceSystem/: DikeSection.py  Mechanisms.py  ReliabilityCalculation.py
vrtool/ResultAnalysis/: CaseStudyPlot.py
vrtool/common/: README.md  dike_traject_info.py  enums.py  measure_unit_costs.py
vrtool/decision_making/: Solutions.py  Strategy.py  StrategyEvaluation.py  kunstwerken_hulpfuncties.py  measures.py  solutions.py  strategies.py  strategy_evaluation.py  traject_risk.py
vrtool/defaults/: README.md  __init__.py  (+2 more)
(+1996 files in other folders)
