[tool.poetry]
name = "vrtool"
version = "0.0.2"
description = ""
authors = ["Wouter Jan Klerk <wouterjan.klerk@deltares.nl>"]
maintainers = [
  "Carles S. Soriano Pérez <carles.sorianoperez@deltares.nl>",
  "Dennis Tang <dennis.tang@deltares.nl>",
  "Edwin Speen <edwin.spee@delatres.nl>",
  "Stephan Rikkert <stephan.rikkert@deltares.nl>",
]
readme = "README.md"
repository = "https://github.com/Deltares/veiligheidsrendement"
packages = [{include="vrtool"},]
keywords = ["civil-engineering", "dikes", "flood-defence", "deltares"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Natural Language :: English',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Hydrology',
]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
shapely = "^2.0.1"
scipy = "1.8.1"
seaborn = "^0.12.2"
openturns = "1.19"
openpyxl = "^3.1.1"
click = "^8.1.3"
d-geolib = "^0.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
teamcity-messages = "^1.32"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
commitizen = "^3.0.1"


[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "externals: marks tests that require of external binaries (deselect with '-m \"not externals\"')",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.2"
tag_format = "v$major.$minor.$patch"
changelog_file = "docs/changelog.md"
update_changelog_on_bump = true
version_files= [
    "vrtool/__init__.py",
    "pyproject.toml:version",]