[tool.poetry]
name = "vrtool"
version = "1.0.1"
description = "veiligheidsrendement tool (core and orm)"
authors = ["Wouter Jan Klerk <wouterjan.klerk@deltares.nl>"]
maintainers = [
  "Carles S. Soriano Pérez <carles.sorianoperez@deltares.nl>",
  "Edwin Spee <edwin.spee@deltares.nl>",
  "Ardt Klapwijk <ardt.klapwijk@deltares.nl>",
  "Stephan Rikkert <stephan.rikkert@deltares.nl>",
]
readme = "README.md"
repository = "https://github.com/Deltares/veiligheidsrendement"
documentation = "https://deltares-research.github.io/VrtoolDocumentation/"
keywords = ["civil-engineering", "dikes", "flood-defence", "deltares"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Natural Language :: English',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Hydrology',
]
packages = [{ include = "vrtool" }]

[tool.poetry.scripts]
migrate_test_db = "scripts.migration.migrate_test_databases:migrate_test_databases"

[tool.poetry.dependencies]
python = "^3.9, <3.11"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
shapely = "^2.0.1"
scipy = "1.8.1"
seaborn = "^0.12.2"
openturns = "1.19"
openpyxl = "^3.1.1"
click = "^8.1.3"
peewee = "^3.16.1"
d-geolib = "^2.4.2"
tqdm = "^4.66.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
teamcity-messages = "^1.32"
pytest-xdist = "^3.3.1"
pytest-profiling = "^1.7.0"
pywin32 = "^307"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
commitizen = "^3.0.1"
urllib3 = "1.26.15"


[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.github          # root of the project
    | \.env
    | \.venv
    | \.config
    | .pytest_cache
    | .scannerwork
    | .vscode
    | site
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = [
  ".git",
  ".github",
  ".env",
  ".venv",
  ".config",
  ".pytest_cache",
  ".scannerwork",
  ".vscode",
  "site",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "regenerate_test_db: tests which simply generate new database references (select with `-m \"regenerate_test_db\" --no-skip`)",
  "externals: marks tests that require of external binaries (deselect with '-m \"not externals\"')",
  "fixture_database: allows to define which database will be used in a fixture; check `tests.orm.conftest.py` for usages",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$major.$minor.$patch"
changelog_file = "docs/changelog.md"
version_files = ["vrtool/__init__.py", "pyproject.toml:version"]
